--- a/Dr-Mohamed-landing-main/package.json
+++ b/Dr-Mohamed-landing-main/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.4.0",
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -15,13 +13,8 @@
     "react-bootstrap": "^2.7.4",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
-    "react-fontawesome": "^1.7.1",
-    "react-icons": "^4.9.0",
     "react-scripts": "5.0.1",
-    "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4",
-    "wow.js": "^1.2.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
